# stylefinder

./: .gitignore  README.md  evaluation_set.json  pyproject.toml  requirements.txt
notebooks/: Task1_Exploration.ipynb  Task2_Visualization.ipynb
src/: build_index.py  config.py  evaluate.py  load_data.py  search.py
